profilelist1exp/unpackaged/objects/Carousel_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IF this checkbox checked that means it is used in Carousel</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Onclick_URL__c</fullName>
        <label>Image Onclick URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <label>Persona</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Persona_Value_Sets</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Slider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Carousel Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <columns>Header__c</columns>
        <columns>Image_Onclick_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Carousel Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carousel Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>